A3/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> function
Rule 2     function -> VOID MAIN LPAREN RPAREN LBRACE statements RBRACE
Rule 3     type -> INT
Rule 4     type -> VOID
Rule 5     var -> ID
Rule 6     const -> NUMBER
Rule 7     pointer -> TIMES pointer
Rule 8     pointer -> TIMES address
Rule 9     pointer -> TIMES var
Rule 10    address -> AMPERSAND pointer
Rule 11    address -> AMPERSAND address
Rule 12    address -> AMPERSAND var
Rule 13    statements -> statement statements
Rule 14    statements -> COMMENT statements
Rule 15    statements -> declaration statements
Rule 16    statements -> <empty>
Rule 17    statement -> assignment
Rule 18    statement -> ifstatement
Rule 19    statement -> whilestatement
Rule 20    declaration -> type idlist SEMICOLON
Rule 21    idlist -> pointer COMMA idlist
Rule 22    idlist -> ID COMMA idlist
Rule 23    idlist -> ID
Rule 24    idlist -> pointer
Rule 25    assignment -> pointer EQUALS expression SEMICOLON
Rule 26    assignment -> var EQUALS expression SEMICOLON
Rule 27    condition -> expression LT expression
Rule 28    condition -> expression GT expression
Rule 29    condition -> expression LE expression
Rule 30    condition -> expression GE expression
Rule 31    condition -> expression EQ expression
Rule 32    condition -> expression NE expression
Rule 33    condition -> condition AND condition
Rule 34    condition -> condition OR condition
Rule 35    condition -> NOT condition
Rule 36    condition -> LPAREN condition RPAREN
Rule 37    controlbody -> LBRACE statements RBRACE
Rule 38    controlbody -> statement
Rule 39    controlbody -> SEMICOLON
Rule 40    ifstatement -> IF LPAREN condition RPAREN controlbody
Rule 41    ifstatement -> IF LPAREN condition RPAREN controlbody ELSE controlbody
Rule 42    whilestatement -> WHILE LPAREN condition RPAREN controlbody
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression TIMES expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> pointer
Rule 48    expression -> address
Rule 49    expression -> const
Rule 50    expression -> var
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> MINUS expression

Terminals, with rules where they appear

AMPERSAND            : 10 11 12
AND                  : 33
COMMA                : 21 22
COMMENT              : 14
DIVIDE               : 46
ELSE                 : 41
EQ                   : 31
EQUALS               : 25 26
GE                   : 30
GT                   : 28
ID                   : 5 22 23
IF                   : 40 41
INT                  : 3
LBRACE               : 2 37
LE                   : 29
LPAREN               : 2 36 40 41 42 51
LT                   : 27
MAIN                 : 2
MINUS                : 44 52
NE                   : 32
NOT                  : 35
NUMBER               : 6
OR                   : 34
PLUS                 : 43
RBRACE               : 2 37
RPAREN               : 2 36 40 41 42 51
SEMICOLON            : 20 25 26 39
TIMES                : 7 8 9 45
VOID                 : 2 4
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

address              : 8 11 48
assignment           : 17
condition            : 33 33 34 34 35 36 40 41 42
const                : 49
controlbody          : 40 41 41 42
declaration          : 15
expression           : 25 26 27 27 28 28 29 29 30 30 31 31 32 32 43 43 44 44 45 45 46 46 51 52
function             : 1
idlist               : 20 21 22
ifstatement          : 18
pointer              : 7 10 21 24 25 47
start                : 0
statement            : 13 38
statements           : 2 13 14 15 37
type                 : 20
var                  : 9 12 26 50
whilestatement       : 19

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . function
    (2) function -> . VOID MAIN LPAREN RPAREN LBRACE statements RBRACE

    VOID            shift and go to state 2

    start                          shift and go to state 1
    function                       shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (2) function -> VOID . MAIN LPAREN RPAREN LBRACE statements RBRACE

    MAIN            shift and go to state 4


state 3

    (1) start -> function .

    $end            reduce using rule 1 (start -> function .)


state 4

    (2) function -> VOID MAIN . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 5


state 5

    (2) function -> VOID MAIN LPAREN . RPAREN LBRACE statements RBRACE

    RPAREN          shift and go to state 6


state 6

    (2) function -> VOID MAIN LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 7


state 7

    (2) function -> VOID MAIN LPAREN RPAREN LBRACE . statements RBRACE
    (13) statements -> . statement statements
    (14) statements -> . COMMENT statements
    (15) statements -> . declaration statements
    (16) statements -> .
    (17) statement -> . assignment
    (18) statement -> . ifstatement
    (19) statement -> . whilestatement
    (20) declaration -> . type idlist SEMICOLON
    (25) assignment -> . pointer EQUALS expression SEMICOLON
    (26) assignment -> . var EQUALS expression SEMICOLON
    (40) ifstatement -> . IF LPAREN condition RPAREN controlbody
    (41) ifstatement -> . IF LPAREN condition RPAREN controlbody ELSE controlbody
    (42) whilestatement -> . WHILE LPAREN condition RPAREN controlbody
    (3) type -> . INT
    (4) type -> . VOID
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (5) var -> . ID

    COMMENT         shift and go to state 8
    RBRACE          reduce using rule 16 (statements -> .)
    IF              shift and go to state 9
    WHILE           shift and go to state 18
    INT             shift and go to state 21
    VOID            shift and go to state 15
    TIMES           shift and go to state 17
    ID              shift and go to state 22

    var                            shift and go to state 10
    type                           shift and go to state 19
    assignment                     shift and go to state 11
    statement                      shift and go to state 20
    statements                     shift and go to state 16
    pointer                        shift and go to state 12
    whilestatement                 shift and go to state 13
    declaration                    shift and go to state 14
    ifstatement                    shift and go to state 23

state 8

    (14) statements -> COMMENT . statements
    (13) statements -> . statement statements
    (14) statements -> . COMMENT statements
    (15) statements -> . declaration statements
    (16) statements -> .
    (17) statement -> . assignment
    (18) statement -> . ifstatement
    (19) statement -> . whilestatement
    (20) declaration -> . type idlist SEMICOLON
    (25) assignment -> . pointer EQUALS expression SEMICOLON
    (26) assignment -> . var EQUALS expression SEMICOLON
    (40) ifstatement -> . IF LPAREN condition RPAREN controlbody
    (41) ifstatement -> . IF LPAREN condition RPAREN controlbody ELSE controlbody
    (42) whilestatement -> . WHILE LPAREN condition RPAREN controlbody
    (3) type -> . INT
    (4) type -> . VOID
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (5) var -> . ID

    COMMENT         shift and go to state 8
    RBRACE          reduce using rule 16 (statements -> .)
    IF              shift and go to state 9
    WHILE           shift and go to state 18
    INT             shift and go to state 21
    VOID            shift and go to state 15
    TIMES           shift and go to state 17
    ID              shift and go to state 22

    var                            shift and go to state 10
    type                           shift and go to state 19
    assignment                     shift and go to state 11
    statement                      shift and go to state 20
    statements                     shift and go to state 24
    pointer                        shift and go to state 12
    whilestatement                 shift and go to state 13
    declaration                    shift and go to state 14
    ifstatement                    shift and go to state 23

state 9

    (40) ifstatement -> IF . LPAREN condition RPAREN controlbody
    (41) ifstatement -> IF . LPAREN condition RPAREN controlbody ELSE controlbody

    LPAREN          shift and go to state 25


state 10

    (26) assignment -> var . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 26


state 11

    (17) statement -> assignment .

    COMMENT         reduce using rule 17 (statement -> assignment .)
    IF              reduce using rule 17 (statement -> assignment .)
    WHILE           reduce using rule 17 (statement -> assignment .)
    INT             reduce using rule 17 (statement -> assignment .)
    VOID            reduce using rule 17 (statement -> assignment .)
    TIMES           reduce using rule 17 (statement -> assignment .)
    ID              reduce using rule 17 (statement -> assignment .)
    RBRACE          reduce using rule 17 (statement -> assignment .)
    ELSE            reduce using rule 17 (statement -> assignment .)


state 12

    (25) assignment -> pointer . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 27


state 13

    (19) statement -> whilestatement .

    COMMENT         reduce using rule 19 (statement -> whilestatement .)
    IF              reduce using rule 19 (statement -> whilestatement .)
    WHILE           reduce using rule 19 (statement -> whilestatement .)
    INT             reduce using rule 19 (statement -> whilestatement .)
    VOID            reduce using rule 19 (statement -> whilestatement .)
    TIMES           reduce using rule 19 (statement -> whilestatement .)
    ID              reduce using rule 19 (statement -> whilestatement .)
    RBRACE          reduce using rule 19 (statement -> whilestatement .)
    ELSE            reduce using rule 19 (statement -> whilestatement .)


state 14

    (15) statements -> declaration . statements
    (13) statements -> . statement statements
    (14) statements -> . COMMENT statements
    (15) statements -> . declaration statements
    (16) statements -> .
    (17) statement -> . assignment
    (18) statement -> . ifstatement
    (19) statement -> . whilestatement
    (20) declaration -> . type idlist SEMICOLON
    (25) assignment -> . pointer EQUALS expression SEMICOLON
    (26) assignment -> . var EQUALS expression SEMICOLON
    (40) ifstatement -> . IF LPAREN condition RPAREN controlbody
    (41) ifstatement -> . IF LPAREN condition RPAREN controlbody ELSE controlbody
    (42) whilestatement -> . WHILE LPAREN condition RPAREN controlbody
    (3) type -> . INT
    (4) type -> . VOID
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (5) var -> . ID

    COMMENT         shift and go to state 8
    RBRACE          reduce using rule 16 (statements -> .)
    IF              shift and go to state 9
    WHILE           shift and go to state 18
    INT             shift and go to state 21
    VOID            shift and go to state 15
    TIMES           shift and go to state 17
    ID              shift and go to state 22

    var                            shift and go to state 10
    type                           shift and go to state 19
    assignment                     shift and go to state 11
    statement                      shift and go to state 20
    statements                     shift and go to state 28
    pointer                        shift and go to state 12
    whilestatement                 shift and go to state 13
    declaration                    shift and go to state 14
    ifstatement                    shift and go to state 23

state 15

    (4) type -> VOID .

    ID              reduce using rule 4 (type -> VOID .)
    TIMES           reduce using rule 4 (type -> VOID .)


state 16

    (2) function -> VOID MAIN LPAREN RPAREN LBRACE statements . RBRACE

    RBRACE          shift and go to state 29


state 17

    (7) pointer -> TIMES . pointer
    (8) pointer -> TIMES . address
    (9) pointer -> TIMES . var
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (5) var -> . ID

    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    ID              shift and go to state 22

    pointer                        shift and go to state 32
    address                        shift and go to state 30
    var                            shift and go to state 31

state 18

    (42) whilestatement -> WHILE . LPAREN condition RPAREN controlbody

    LPAREN          shift and go to state 34


state 19

    (20) declaration -> type . idlist SEMICOLON
    (21) idlist -> . pointer COMMA idlist
    (22) idlist -> . ID COMMA idlist
    (23) idlist -> . ID
    (24) idlist -> . pointer
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var

    ID              shift and go to state 36
    TIMES           shift and go to state 17

    pointer                        shift and go to state 35
    idlist                         shift and go to state 37

state 20

    (13) statements -> statement . statements
    (13) statements -> . statement statements
    (14) statements -> . COMMENT statements
    (15) statements -> . declaration statements
    (16) statements -> .
    (17) statement -> . assignment
    (18) statement -> . ifstatement
    (19) statement -> . whilestatement
    (20) declaration -> . type idlist SEMICOLON
    (25) assignment -> . pointer EQUALS expression SEMICOLON
    (26) assignment -> . var EQUALS expression SEMICOLON
    (40) ifstatement -> . IF LPAREN condition RPAREN controlbody
    (41) ifstatement -> . IF LPAREN condition RPAREN controlbody ELSE controlbody
    (42) whilestatement -> . WHILE LPAREN condition RPAREN controlbody
    (3) type -> . INT
    (4) type -> . VOID
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (5) var -> . ID

    COMMENT         shift and go to state 8
    RBRACE          reduce using rule 16 (statements -> .)
    IF              shift and go to state 9
    WHILE           shift and go to state 18
    INT             shift and go to state 21
    VOID            shift and go to state 15
    TIMES           shift and go to state 17
    ID              shift and go to state 22

    var                            shift and go to state 10
    type                           shift and go to state 19
    assignment                     shift and go to state 11
    statement                      shift and go to state 20
    statements                     shift and go to state 38
    pointer                        shift and go to state 12
    whilestatement                 shift and go to state 13
    declaration                    shift and go to state 14
    ifstatement                    shift and go to state 23

state 21

    (3) type -> INT .

    ID              reduce using rule 3 (type -> INT .)
    TIMES           reduce using rule 3 (type -> INT .)


state 22

    (5) var -> ID .

    RPAREN          reduce using rule 5 (var -> ID .)
    LT              reduce using rule 5 (var -> ID .)
    GT              reduce using rule 5 (var -> ID .)
    LE              reduce using rule 5 (var -> ID .)
    GE              reduce using rule 5 (var -> ID .)
    EQ              reduce using rule 5 (var -> ID .)
    NE              reduce using rule 5 (var -> ID .)
    PLUS            reduce using rule 5 (var -> ID .)
    MINUS           reduce using rule 5 (var -> ID .)
    TIMES           reduce using rule 5 (var -> ID .)
    DIVIDE          reduce using rule 5 (var -> ID .)
    SEMICOLON       reduce using rule 5 (var -> ID .)
    AND             reduce using rule 5 (var -> ID .)
    OR              reduce using rule 5 (var -> ID .)
    EQUALS          reduce using rule 5 (var -> ID .)
    COMMA           reduce using rule 5 (var -> ID .)


state 23

    (18) statement -> ifstatement .

    COMMENT         reduce using rule 18 (statement -> ifstatement .)
    IF              reduce using rule 18 (statement -> ifstatement .)
    WHILE           reduce using rule 18 (statement -> ifstatement .)
    INT             reduce using rule 18 (statement -> ifstatement .)
    VOID            reduce using rule 18 (statement -> ifstatement .)
    TIMES           reduce using rule 18 (statement -> ifstatement .)
    ID              reduce using rule 18 (statement -> ifstatement .)
    RBRACE          reduce using rule 18 (statement -> ifstatement .)
    ELSE            reduce using rule 18 (statement -> ifstatement .)


state 24

    (14) statements -> COMMENT statements .

    RBRACE          reduce using rule 14 (statements -> COMMENT statements .)


state 25

    (40) ifstatement -> IF LPAREN . condition RPAREN controlbody
    (41) ifstatement -> IF LPAREN . condition RPAREN controlbody ELSE controlbody
    (27) condition -> . expression LT expression
    (28) condition -> . expression GT expression
    (29) condition -> . expression LE expression
    (30) condition -> . expression GE expression
    (31) condition -> . expression EQ expression
    (32) condition -> . expression NE expression
    (33) condition -> . condition AND condition
    (34) condition -> . condition OR condition
    (35) condition -> . NOT condition
    (36) condition -> . LPAREN condition RPAREN
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . pointer
    (48) expression -> . address
    (49) expression -> . const
    (50) expression -> . var
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . MINUS expression
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (6) const -> . NUMBER
    (5) var -> . ID

    NOT             shift and go to state 39
    LPAREN          shift and go to state 43
    MINUS           shift and go to state 48
    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    NUMBER          shift and go to state 40
    ID              shift and go to state 22

    pointer                        shift and go to state 41
    address                        shift and go to state 47
    const                          shift and go to state 46
    var                            shift and go to state 44
    condition                      shift and go to state 45
    expression                     shift and go to state 42

state 26

    (26) assignment -> var EQUALS . expression SEMICOLON
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . pointer
    (48) expression -> . address
    (49) expression -> . const
    (50) expression -> . var
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . MINUS expression
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (6) const -> . NUMBER
    (5) var -> . ID

    LPAREN          shift and go to state 49
    MINUS           shift and go to state 48
    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    NUMBER          shift and go to state 40
    ID              shift and go to state 22

    expression                     shift and go to state 50
    address                        shift and go to state 47
    pointer                        shift and go to state 41
    var                            shift and go to state 44
    const                          shift and go to state 46

state 27

    (25) assignment -> pointer EQUALS . expression SEMICOLON
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . pointer
    (48) expression -> . address
    (49) expression -> . const
    (50) expression -> . var
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . MINUS expression
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (6) const -> . NUMBER
    (5) var -> . ID

    LPAREN          shift and go to state 49
    MINUS           shift and go to state 48
    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    NUMBER          shift and go to state 40
    ID              shift and go to state 22

    pointer                        shift and go to state 41
    address                        shift and go to state 47
    expression                     shift and go to state 51
    var                            shift and go to state 44
    const                          shift and go to state 46

state 28

    (15) statements -> declaration statements .

    RBRACE          reduce using rule 15 (statements -> declaration statements .)


state 29

    (2) function -> VOID MAIN LPAREN RPAREN LBRACE statements RBRACE .

    $end            reduce using rule 2 (function -> VOID MAIN LPAREN RPAREN LBRACE statements RBRACE .)


state 30

    (8) pointer -> TIMES address .

    COMMA           reduce using rule 8 (pointer -> TIMES address .)
    SEMICOLON       reduce using rule 8 (pointer -> TIMES address .)
    PLUS            reduce using rule 8 (pointer -> TIMES address .)
    MINUS           reduce using rule 8 (pointer -> TIMES address .)
    TIMES           reduce using rule 8 (pointer -> TIMES address .)
    DIVIDE          reduce using rule 8 (pointer -> TIMES address .)
    LT              reduce using rule 8 (pointer -> TIMES address .)
    GT              reduce using rule 8 (pointer -> TIMES address .)
    LE              reduce using rule 8 (pointer -> TIMES address .)
    GE              reduce using rule 8 (pointer -> TIMES address .)
    EQ              reduce using rule 8 (pointer -> TIMES address .)
    NE              reduce using rule 8 (pointer -> TIMES address .)
    RPAREN          reduce using rule 8 (pointer -> TIMES address .)
    AND             reduce using rule 8 (pointer -> TIMES address .)
    OR              reduce using rule 8 (pointer -> TIMES address .)
    EQUALS          reduce using rule 8 (pointer -> TIMES address .)


state 31

    (9) pointer -> TIMES var .

    COMMA           reduce using rule 9 (pointer -> TIMES var .)
    SEMICOLON       reduce using rule 9 (pointer -> TIMES var .)
    PLUS            reduce using rule 9 (pointer -> TIMES var .)
    MINUS           reduce using rule 9 (pointer -> TIMES var .)
    TIMES           reduce using rule 9 (pointer -> TIMES var .)
    DIVIDE          reduce using rule 9 (pointer -> TIMES var .)
    LT              reduce using rule 9 (pointer -> TIMES var .)
    GT              reduce using rule 9 (pointer -> TIMES var .)
    LE              reduce using rule 9 (pointer -> TIMES var .)
    GE              reduce using rule 9 (pointer -> TIMES var .)
    EQ              reduce using rule 9 (pointer -> TIMES var .)
    NE              reduce using rule 9 (pointer -> TIMES var .)
    RPAREN          reduce using rule 9 (pointer -> TIMES var .)
    AND             reduce using rule 9 (pointer -> TIMES var .)
    OR              reduce using rule 9 (pointer -> TIMES var .)
    EQUALS          reduce using rule 9 (pointer -> TIMES var .)


state 32

    (7) pointer -> TIMES pointer .

    COMMA           reduce using rule 7 (pointer -> TIMES pointer .)
    SEMICOLON       reduce using rule 7 (pointer -> TIMES pointer .)
    PLUS            reduce using rule 7 (pointer -> TIMES pointer .)
    MINUS           reduce using rule 7 (pointer -> TIMES pointer .)
    TIMES           reduce using rule 7 (pointer -> TIMES pointer .)
    DIVIDE          reduce using rule 7 (pointer -> TIMES pointer .)
    LT              reduce using rule 7 (pointer -> TIMES pointer .)
    GT              reduce using rule 7 (pointer -> TIMES pointer .)
    LE              reduce using rule 7 (pointer -> TIMES pointer .)
    GE              reduce using rule 7 (pointer -> TIMES pointer .)
    EQ              reduce using rule 7 (pointer -> TIMES pointer .)
    NE              reduce using rule 7 (pointer -> TIMES pointer .)
    RPAREN          reduce using rule 7 (pointer -> TIMES pointer .)
    AND             reduce using rule 7 (pointer -> TIMES pointer .)
    OR              reduce using rule 7 (pointer -> TIMES pointer .)
    EQUALS          reduce using rule 7 (pointer -> TIMES pointer .)


state 33

    (10) address -> AMPERSAND . pointer
    (11) address -> AMPERSAND . address
    (12) address -> AMPERSAND . var
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (5) var -> . ID

    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    ID              shift and go to state 22

    pointer                        shift and go to state 54
    address                        shift and go to state 52
    var                            shift and go to state 53

state 34

    (42) whilestatement -> WHILE LPAREN . condition RPAREN controlbody
    (27) condition -> . expression LT expression
    (28) condition -> . expression GT expression
    (29) condition -> . expression LE expression
    (30) condition -> . expression GE expression
    (31) condition -> . expression EQ expression
    (32) condition -> . expression NE expression
    (33) condition -> . condition AND condition
    (34) condition -> . condition OR condition
    (35) condition -> . NOT condition
    (36) condition -> . LPAREN condition RPAREN
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression TIMES expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . pointer
    (48) expression -> . address
    (49) expression -> . const
    (50) expression -> . var
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . MINUS expression
    (7) pointer -> . TIMES pointer
    (8) pointer -> . TIMES address
    (9) pointer -> . TIMES var
    (10) address -> . AMPERSAND pointer
    (11) address -> . AMPERSAND address
    (12) address -> . AMPERSAND var
    (6) const -> . NUMBER
    (5) var -> . ID

    NOT             shift and go to state 39
    LPAREN          shift and go to state 43
    MINUS           shift and go to state 48
    TIMES           shift and go to state 17
    AMPERSAND       shift and go to state 33
    NUMBER          shift and go to state 40
    ID              shift and go to state 22

    pointer                        shift and go to state 41
    address                        shift and go to state 47
    const                          shift and go to state 46
    var                            shift and go to state 44
    condition                      shift and go to state 55
    expression                     shift and go to state 42

state 35

    (21) idlist -> pointer . COMMA idlist
    (24) idlist -> pointer .

    COMMA           shift and go to state 56
    SEMICOLON       reduce using rule 24 (idlist -> pointer .)


state 36

    (22) idlist -> ID . COMMA idlist
    (23) idlist -> ID .

    COMMA           shift and go to state 57
    SEMICOLON       reduce using rule 23 (idlist -> ID .)


state 37

    (20) declaration -> type idlist . SEMICOLON

    SEMICOLON       shift and go to state 58


state 38

    (13) statements -> statement statements .

    RBRACE          reduce using rule 13 (statements -> statement statements .)


state 39
